# librime

./: CMakeLists.txt  Makefile  android.mk  deps.mk  install-boost.sh  trime.mk
.github/workflows/: android-build.yml  commit-ci.yml  trime-build.yml
librime_jni/: CMakeLists.txt  jni-utils.h
